# responsiveness_check

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
tests/: test_validator.py
validator/: __init__.py  generic_prompt_validator.py  main.py  post-install.py
